frontend (feat): Add search bar and footer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,8 +33,23 @@
             </div>
         </header>
         <main>
+            <div id="search-bar-container">
+                <h1>MedAI</h1>
+                <div id="search-bar">
+                    <button class="toggle-button" id="attach-button">
+                        <img src="images/attach-icon.png" alt="Attach">
+                    </button>
+                    <input type="search" name="query" id="search-input-text" placeholder="What's Up, Doc?">
+                    <button type="submit" class="toggle-button" id="send-button">
+                        <img src="images/send-icon.png" alt="Send">
+                    </button>
+                </div>
+            </div>
 
         </main>
+        <footer>
+            <p>Design by <strong>quuixly</strong></p>
+        </footer>
         </div>
     </body>
 </html>
