--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,11 +44,49 @@
                         <img src="images/send-icon.png" alt="Send">
                     </button>
                 </div>
+                <div id="search-bar-tools">
+                    <button class="ghost-button">
+                        Ingredient Checker
+                    </button>
+                    <button class="ghost-button">
+                        BMI Calculator
+                    </button>
+                    <button class="ghost-button">
+                        Brain Fixer
+                    </button>
+                </div>
             </div>
-
+            <!-- <div id="recent-chats-container">
+                <div id="recent-chats-header">
+                    <h2>Recent chats</h2>
+                </div>
+                <div id="recent-chats">
+                    <div class="chat-item">
+                        <img src="images/placholder-image.png" alt="Placeholder image">
+                        <div class="chat-item-text-container">
+                            <h3>Drugs</h3>
+                            <p>Please provide a detailed description of cocaine, including its chemical composition, physical forms...</p>
+                        </div>
+                    </div>
+                    <div class="chat-item">
+                        <img src="images/placholder-image.png" alt="Placeholder image">
+                        <div class="chat-item-text-container">
+                            <h3>Drugs</h3>
+                            <p>Please provide a detailed description of cocaine, including its chemical composition, physical forms...</p>
+                        </div>
+                    </div>
+                    <div class="chat-item">
+                        <img src="images/placholder-image.png" alt="Placeholder image">
+                        <div class="chat-item-text-container">
+                            <h3>Drugs</h3>
+                            <p>Please provide a detailed description of cocaine, including its chemical composition, physical forms...</p>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
         </main>
         <footer>
-            <p>Design by <strong>quuixly</strong></p>
+            <p>Remember to always <strong>verify the information</strong> received from AI.</p>
         </footer>
         </div>
     </body>
