frontend (refactor): Refactor code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/aside.css">
+        <link rel="stylesheet" href="css/landing-page.css">
         <!-- Scripts -->
         <script src="js/main.js" defer></script>
     </head>
@@ -34,7 +35,7 @@
                     </button>
                 </div>
                 <div id="chat-list-container">
-                    <h3 id="chat-list-header">Chats</h3>
+                    <h4 id="chat-list-header">Chats</h4>
                     <div id="chat-list">
                         <div class="chat-item">
                             <h4>How to how to</h4>
